@@ -26,8 +26,7 @@
     </ul>
 
     <div id="details" style="display: none">
-      <h2><b>Trace</b></h2>
-      <div>{{ stacktrace_html }}</div>
+      {{ stacktrace_html }}
     </div>
 
      <div id="report_error_message" class="error" style="display: none">
