@@ -1,4 +1,7 @@
 3.4
+	+ Added a UnhandledError middleware to catch any die or exception not
+	  handled by Zentyal
+	+ Added a Devel::StackTrace helper view that shows pretty backtraces
 	+ Added template for download link
 	+ Created EBox::Util::Certificate, refactored create-certificate
 	  script
